--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,15 +8,18 @@
     "@testing-library/user-event": "^13.5.0",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
+    "polyfill": "^0.1.0",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "stream": "^0.0.2",
+    "stream-http": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
